Fixed the problem with datetimes and sqlc driver

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -16,11 +16,6 @@ sql:
               package: "uuid"
               type: "UUID"
 
-          - column: "users.created_at"
-            go_type: "time.Time"
-          - column: "users.updated_at"
-            go_type: "time.Time"
-
           # Refresh Tokens
           - column: "refresh_tokens.user_id"
             go_type:
@@ -28,21 +23,11 @@ sql:
               package: "uuid"
               type: "UUID"
 
-          - column: "refresh_tokens.created_at"
-            go_type: "time.Time"
-
-          - column: "refresh_tokens.updated_at"
-            go_type: "time.Time"
-
-          - column: "refresh_tokens.expires_at"
-            go_type: "time.Time"
-
           - column: "refresh_tokens.revoked_at"
             nullable: true
             go_type:
               import: "database/sql"
-
-              type: "NullTime"
+              type: "NullString"
 
           # Transactions
           - column: "transactions.id"
@@ -56,13 +41,4 @@ sql:
               import: "github.com/google/uuid"
               package: "uuid"
               type: "UUID"
-
-          - column: "transactions.occurred_at"
-            go_type: "time.Time"
-
-          - column: "transactions.created_at"
-            go_type: "time.Time"
-
-          - column: "transactions.updated_at"
-            go_type: "time.Time"
 
